[package]
name = 'pallet-funding'
description = "Funding logic. It allows credentialed users to create, evaluate, and fund projects."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
parity-scale-codec = { workspace = true, features = [
  "derive",
], default-features = false }
scale-info = { workspace = true, default-features = false, features = [
  "derive",
] }
log.workspace = true

pallet-linear-release.workspace = true
on-slash-vesting.workspace = true
pallet-proxy-bonding.workspace = true

# Substrate dependencies
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-arithmetic.workspace = true
polimec-common.workspace = true
sp-core.workspace = true
pallet-balances.workspace = true
xcm.workspace = true
xcm-executor.workspace = true
polkadot-parachain-primitives.workspace = true
sp-api.workspace = true
polimec-common-test-utils = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }
hex-literal.workspace = true
k256.workspace = true
hex.workspace = true
#sp-application-crypto.workspace = true

# Used in the instantiator.
itertools.workspace = true
sp-io.workspace = true
cumulus-pallet-parachain-system.workspace = true
cumulus-primitives-core.workspace = true

[dev-dependencies]
pallet-timestamp.workspace = true
pallet-assets.workspace = true
pallet-linear-release.workspace = true
polimec-common-test-utils.workspace = true
xcm-builder.workspace = true
xcm-executor.workspace = true

[features]
default = [ "sp-core/serde", "std" ]
std = [
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"hex/std",
	"itertools/use_std",
	"k256/std",
	"log/std",
	"on-slash-vesting/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-linear-release/std",
	"pallet-proxy-bonding/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"polimec-common-test-utils",
	"polimec-common-test-utils/std",
	"polimec-common/std",
	"polkadot-parachain-primitives/std",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-arithmetic/std",
	"sp-core/full_crypto",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"itertools/use_alloc",
	"on-slash-vesting/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-linear-release/runtime-benchmarks",
	"pallet-proxy-bonding/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"polimec-common-test-utils",
	"polimec-common-test-utils?/runtime-benchmarks",
	"polimec-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"on-slash-vesting/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-linear-release/try-runtime",
	"pallet-proxy-bonding/try-runtime",
	"pallet-timestamp/try-runtime",
	"polimec-common-test-utils?/try-runtime",
	"polimec-common/try-runtime",
	"sp-runtime/try-runtime",
]
on-chain-release-build = []
