[package]
name = "pallet-linear-release"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT-0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME example pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
log.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
polimec-common.workspace = true
frame-benchmarking = { workspace = true, optional = true }
pallet-funding = { workspace = true, optional = true }
xcm-builder = { workspace = true, optional = true }

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
serde.workspace = true
pallet-balances.workspace = true


[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"pallet-funding/std",
	"parity-scale-codec/std",
	"polimec-common/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-funding",
	"pallet-funding?/runtime-benchmarks",
	"polimec-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-funding/try-runtime",
	"polimec-common/try-runtime",
	"sp-runtime/try-runtime",
]
testing-node = [ "pallet-funding/testing-node" ]
