[package]
name = "pallet-linear-release"
description = "It allows to set a Release Schedule using the new `fungible::Hold` API."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
polimec-common.workspace = true
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-io.workspace = true
pallet-balances.workspace = true

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"parity-scale-codec/std",
	"polimec-common/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"polimec-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"polimec-common/try-runtime",
	"sp-runtime/try-runtime",
]
