[package]
authors = ['Polimec Team <https://github.com/Polimec>']
description = 'FRAME pallet make multicurrencies'
edition = '2018'
license = 'Unlicense'
name = 'pallet-multi-mint'
repository = 'https://github.com/polimec/polimec-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = {version = '1.0.111', optional = true}

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.traits]
default-features = false
version = '*'
path = '../traits'

[dependencies.orml-traits]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
rev = 'a428aba69e394f14901f19a305a12c89566d9215'

[dependencies.orml-tokens]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
rev = 'a428aba69e394f14901f19a305a12c89566d9215'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.pallet-authorship]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.transaction-payment]
default-features = false
package = 'pallet-transaction-payment'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.session]
default-features = false
package = 'pallet-session'
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'serde',
    'transaction-payment/std',
    'session/std',
    'sp-session/std',
    'pallet-authorship/std',
    'orml-tokens/std',
    'orml-traits/std',
    'traits/std',
    'sp-runtime/std'
]
