[package]
authors = ['Polimec Team <https://github.com/Polimec>']
description = 'FRAME pallet poli stake'
edition = '2018'
license = 'Unlicense'
name = 'pallet-multi-stake'
repository = 'https://github.com/polimec/polimec-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
pallet-multi-mint = { version = '*', path = '../multi-mint', default-features = false }
traits = { version = '*', path = '../traits', default-features = false }
serde = { version = '1.0.111', optional = true }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.pallet-proposal]
default-features = false
version = '*'
path = '../proposal'

[dev-dependencies.pallet-issuer-council]
default-features = false
version = '*'
path = '../issuer-council'

[dev-dependencies.pallet-bonding-payouts]
default-features = false
version = '*'
path = '../bonding-payouts'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.orml-traits]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
rev = 'a428aba69e394f14901f19a305a12c89566d9215'

[dependencies.orml-tokens]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
rev = 'a428aba69e394f14901f19a305a12c89566d9215'

[features]
default = ['std']
std = [
  'codec/std',
  'sp-std/std',
  'frame-support/std',
  'frame-system/std',
  'serde',
  'sp-runtime/std',
  'orml-traits/std',
  'orml-tokens/std',
  'pallet-multi-mint/std',
  'traits/std'
]
