[package]
name = "pallet-oracle-ocw"
version = "0.1.0"
description = "Offchain worker pallet for fetching price data and feeding prices to oracle pallet. Only authorised nodes can feed prices."
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://polkadot.network/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/paritytech/polkadot-sdk.git"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = '1.0.108', default-features = false, features = ['alloc'] }
log.workspace = true
frame-support.workspace = true
frame-system.workspace = true
orml-oracle.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }
parking_lot = "0.12.1"

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-oracle/std",
	"pallet-balances/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-oracle/try-runtime",
	"pallet-balances/try-runtime",
	"sp-runtime/try-runtime",
]
