[package]
name = "pallet-oracle-ocw"
description = "Offchain worker pallet for fetching price data and feeding prices to oracle pallet. Only authorised nodes can feed prices."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde-json-core.workspace = true
heapless = {workspace = true, features = ["serde"] }
log.workspace = true
frame-support.workspace = true
frame-system.workspace = true
orml-oracle.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
substrate-fixed = {workspace = true}

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }
parking_lot = "0.12.1"
polimec-common-test-utils.workspace = true

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-oracle/std",
	"pallet-balances/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde-json-core/std",
	"serde/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
	"substrate-fixed/std",
	"polimec-common-test-utils/std",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-oracle/try-runtime",
	"pallet-balances/try-runtime",
	"sp-runtime/try-runtime",
	"polimec-common-test-utils/try-runtime"
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"polimec-common-test-utils/runtime-benchmarks"
]
