[package]
authors = ["KILT <info@kilt.io>"]
description = "Parachain parachain-staking pallet for collator delegation and selection as well as reward distribution"
edition = "2021"
name = "parachain-staking"
version = "1.8.0"

[dev-dependencies]
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[dependencies]
log = "0.4.17"
scale-info = { version = "2.3.1", default-features = false, features = [
  "derive",
  "serde",
] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.152", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false }
kilt-runtime-api-staking = { path = "../../runtime-api/staking", default-features = false }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32", default-features = false, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-staking/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
]
std = [
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-session/std",
  "codec/std",
  "kilt-runtime-api-staking/std",
  "scale-info/std",
  "serde",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-session/try-runtime",
]
