[package]
name = "pallet-parachain-staking"
description = "prachain staking pallet for collator selection and reward distribution"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1", default-features = false, optional = true }
log = "0.4"

parity-scale-codec = { workspace = true, features = [
	"derive",
] }
scale-info = { workspace = true, features = ["derive"] }

# FRAME
frame-benchmarking = { workspace = true, optional = true }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
substrate-fixed.workspace = true
sp-staking.workspace = true
pallet-authorship.workspace = true
pallet-session.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
pallet-aura.workspace = true
pallet-timestamp.workspace = true
similar-asserts = "1.1.0"
sp-core.workspace = true
sp-io.workspace = true
sp-consensus-aura.workspace = true

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-balances/std",
	"sp-consensus-aura/std"
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
