[package]
name = "polimec-receiver"
authors = ["Anonymous"]
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
log.workspace = true

# Substrate
frame-benchmarking = { workspace = true, optional = true}
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
cumulus-pallet-xcm.workspace = true
polkadot-parachain-primitives.workspace = true
polimec-common.workspace = true
sp-runtime.workspace = true
xcm.workspace = true

[dev-dependencies]
serde.workspace = true

# Substrate
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"polimec-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"polimec-common/std",
	"polkadot-parachain-primitives/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"polimec-common/try-runtime",
	"sp-runtime/try-runtime",
]
