[package]
authors = ['Polimec Team <https://github.com/Polimec>']
description = 'FRAME pallet proposal'
edition = '2018'
license = 'Unlicense'
name = 'pallet-proposal'
repository = 'https://github.com/polimec/polimec-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = '1.0.111', optional = true }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate'
rev = 'b27503591d019b94a0eea7510578dadc5ad3196c'

[features]
default = ['std']
std = [
  'codec/std',
  'sp-std/std',
  'frame-support/std',
  'frame-system/std',
  'serde',
  'sp-runtime/std',
]
