[package]
name = "pallet-proxy-bonding"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
frame-system.workspace = true
frame-support.workspace = true
frame-benchmarking = { workspace = true, optional = true }
sp-runtime.workspace = true
polimec-common.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
serde = { workspace = true, features = ["derive"] }
xcm.workspace = true
log.workspace = true

[dev-dependencies]
sp-io.workspace = true
pallet-linear-release.workspace = true
pallet-balances.workspace = true
pallet-assets.workspace = true


[features]
default = [ "std" ]

std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-linear-release/std",
	"parity-scale-codec/std",
	"polimec-common/std",
	"scale-info/std",
	"serde/std",
	"sp-io/std",
	"sp-runtime/std",
	"xcm/std",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-linear-release/try-runtime",
	"polimec-common/try-runtime",
	"sp-runtime/try-runtime",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-linear-release/runtime-benchmarks",
	"polimec-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
